# User-APP-And-Event-Monitor

login-monitor-1.1kord/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  login-monitor.service  login_monitor
login-monitor-1.1kord/debian/: README.Debian  README.source  changelog  conffiles  control  copyright  files  install  login-monitor.doc-base.EX  postinst  prerm
login-monitor-1.1kord/etc/dbus-1/system.d/: com.kylin.intel.edu.uregis.conf
login-monitor-1.1kord/src/client/: Makefile  dbus_client  dbus_client.c  systime_monitor.c  systime_monitor.h
login-monitor-1.1kord/src/server/: dbus_server.c  dbus_server.h  dpkg_monitor.c  dpkg_monitor.h  list.c  list.h  login_monitor.c  login_monitor.h  main.c  systime_monitor.c  typedef.h
